tests/files/invalid_files/invalid_syntax.ys
ruleset Hello {
    name str required true
    no_data
}

schema {
    hello Hello
}